--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,38 +2,47 @@
 
 /* Global */
 * {
-  /* outline: 2px greenyellow solid; */
+  /* outline: 2px rgb(80, 121, 19) solid; */
   box-sizing: border-box;
   margin: 0;
   padding: 0;}
 
 body {
   font-family: 'Rajdhani', sans-serif;
-  font-size: clamp(1rem, 1vw + 0.5rem, 5rem);
+  /* font-size: clamp(1rem, 1vw + 0.5rem, 5rem); */
   color: white;
-  width: 100%;
-  /* height: 1000px; */
-  overflow-x:hidden;
-  background-color: black;}
 
-/* - HIDDEN - */
-.blog-post h4 {
-  display: none;}
+  background-color: rgb(3, 2, 66);}
+
 
 /* --- ALL HOVERS --- */ 
-.navbar .highlight,
-.navbar .current a {
-  color: cyan;
-  font-weight: bold;}
-.navbar a:hover {
-  color: #05f7ff;
-  font-weight: bold;}
+.navbar-container .highlight,
+.navbar-container .current a {
+  
+     
+  filter: drop-shadow(2px 2px 2px rgba(155, 141, 13, 0.9));
+
+  /* Set the background-clip to text */
+  background-clip: text;
+  
+  /* Set the background image to a linear gradient */
+  -webkit-background-clip: text;
+  background-image: linear-gradient(to right,  rgb(11, 238, 11), rgb(145, 235, 0), rgb(17, 230, 17));
+  
+  /* Set the text color to transparent */
+  color: transparent;
+ 
+  }
+.navbar-container a:hover {
+  color: #910aff;
+ 
+ }
 .logotype:hover {
   color: #05f7ff;}
-.form-button:hover {
+.newsletter-button:hover {
   background-color: #05f7ff;
   color: black;}
-.blog-container a:hover {
+.post-section a:hover {
   color: cyan;}
 .social-links li a i:hover {
   background: greenyellow;
@@ -42,9 +51,12 @@ body {
 /* - HEADER - */ 
 .header-container {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
-  width: 100%;
-  height: 3em;
+  align-items: center;
+  height: 6em;
+  padding: 0 3em;
+
   background-color:black;
   border-bottom: 4px solid;
   border-image: linear-gradient(
@@ -53,88 +65,94 @@ body {
     rgb(2, 233, 241) 60%,
     #73028a 70%
     ) 1 2 10%;}
+
 .logotype {
-  position: relative;
-  top: 0.15em;
-  left: 5%;
-  color: #ffffff;
+  /* outline: auto; */
   text-decoration: unset;
-  font-size: clamp(3rem, 1vw + 1rem, 5rem);
-  margin: 0.5em;
+  font-family: "Conthrax";
+  font-size: 3rem;
+  color: #ffffff;
   
-  filter: drop-shadow(0px 3px 2px rgba(8, 245, 253, 0.9));}
+  filter: drop-shadow(2px 2px 2px rgba(255, 230, 0, 0.9));
+
+  /* Set the background-clip to text */
+  background-clip: text;
+  
+  /* Set the background image to a linear gradient */
+  -webkit-background-clip: text;
+  background-image: linear-gradient(to right,  rgb(11, 238, 11), rgb(145, 235, 0), rgb(17, 230, 17));
+  
+  /* Set the text color to transparent */
+  color: transparent;
+}
+.logotype-container,
+.navbar-container{
+  /* margin:2em 0; */
+}
+
 
 /* - NAV-BAR - */
-.navbar {
+.navbar-container {
   display: flex;
   justify-content: end;
   width: 100%;
-  position: relative;
-  top: -1.5em;
-  margin: 1em;}
-.navbar ul {
+  }
+.navbar-container ul {
+  list-style: none;
   display: flex;
   gap: 3em;
-  height: 4em;
-  list-style: none;
-  padding: 1em;}
-.navbar a {
+}
+.navbar-container a {
   color: #ffffff;
-  font-size: clamp(3rem, 1vw + 1rem, 5rem);
+  font-size: 3rem;
   text-transform: uppercase;
   text-decoration: unset;}
 
-
-/* - LANDING IMAGE - */ 
-.landing-image-container {
-    width: 100%;
-  }
-
-.landing-image img {
-    position: relative;
-    top: -5%;
-    width: 100%;
-    height: 33em;
-    background-size: cover;
-    background-repeat: no-repeat;}
-
 /* - LANDING TEXT - */ 
 .landing-text {
-    margin: 0;
-    padding: 0em 3em;
-    position: relative;
-    top: -29em;
-    left:0.5em;
-    width: 50%;
+/* display: none; */
 }
 .landing-text h2 {
-    font-size: clamp(4.5rem, 1vw + 1rem, 5rem);}
-  
-/* - BLOG - */
-.blog-container-wrapper {
-  display: flex;
-  justify-content: center;
-  position: relative;
-  top: -33em;
-  padding: 1em 0;
-  margin-top:1em;
-  margin-bottom:1em;
+  font-size: clamp(2rem, 1vw + 2.3rem, 5rem);
+  font-style: italic;
+  filter: drop-shadow(2px 2px 2px rgba(255, 230, 0, 0.9));
+
+/* Set the background-clip to text */
+background-clip: text;
+
+/* Set the background image to a linear gradient */
+-webkit-background-clip: text;
+background-image: linear-gradient(to right,  rgb(11, 238, 11), rgb(145, 235, 0), rgb(17, 230, 17));
+
+/* Set the text color to transparent */
+color: transparent;
+
 
 }
-.blog-container {
+  
+/* - POSTS SECTION - */
+.post-section-container {
+  display: flex;
+  justify-content: center;
+ /* outline: auto; */
+  /* padding: 1em 0; */
+ margin: 4.4em 0;
+}
+.post-section {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     flex-direction: row;
-    gap: 4.5em;
-    left: 0em;
+    gap: 4em;
+
     }
-.blog-post,
-.blog-post-2,
-.blog-post-3 {
-    max-width:18em;
+.post
+{
+  height:35em;
+    width:28em;
     padding: 1em 1.2em;
     background-color: black;
-    border: 10px solid;
+    border: 5px solid;
     border-image:linear-gradient(
       to bottom,
       rgba(8, 85, 201, 0.5),
@@ -142,12 +160,12 @@ body {
       rgba(255, 25, 224, 0.8),
       rgba(255, 25, 224, 0.1)
     ) 1 2 10% 90%;} 
-.blog-post img,
-.blog-post-2 img,
-.blog-post-3 img {
+.post-image {
+  padding: 0.2em;
+  object-fit: cover;
     width: 100%;
-    height: 7em;
-    border: 8px solid;
+    height: 15em;
+    border: 5px solid;
     border-image:linear-gradient(
       to bottom,
       rgba(8, 85, 201, 0.5),
@@ -156,51 +174,86 @@ body {
       rgba(255, 25, 224, 0.1)
     ) 1 2 10% 90%;} 
 
-.blog-post h3,
-.blog-post-2 h3,
-.blog-post-3 h3 {
+.post-header {
     margin: 0.3em 0;
     text-align: start;
-    font-size: clamp(1rem, 1vw + 0.5rem, 3rem);
+    font-size: clamp(0.2rem, 0.7vw + 1rem, 3rem);
   }
-.blog-post p,
-.blog-post-2 p,
-.blog-post-3 p {
-    height:8em; 
+.post-text {
+  /* outline: auto; */
+    height:12em; 
     text-align: start;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: clamp(1rem, 0.5vw + 1rem, 1rem);}
-.blog-post a,
-.blog-post-2 a,
-.blog-post-3 a {
-    float: right;
-    position: relative;
-    top: 0.4em;
-    font-size: clamp(1rem, 1vw + 1rem, 1.2rem);
-    color: cyan;}
+    font-size: clamp(0.2rem, 0.5vw + 1rem, 1rem);}
+.post-read-more {
+  float:right;
+    font-size: clamp(0.2rem, 1vw + 1rem, 1.2rem);
+    color: cyan;
+  }
+  .post-read-more-text {
+    color:cyan;
+  }
+
+/* - FOOTER - */
+.footer-container {  
+
+  background-color: #000000;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction:row-reverse;
+  justify-content: center;
+  justify-content: space-evenly;
+
+  /* height:12em; */
+  padding: 1em 0;
+  border-top: 4px solid;
+  border-image: linear-gradient(
+    to right,
+    #73028a 10%,
+    rgb(2, 233, 241) 60%,
+    #73028a 70%
+    ) 1 2 10%;
+}
+.social-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;}
+.social-links li a i {
+  text-align: center;
+  margin: 0.4em;
+  width: 70px;
+  height: 70px;
+  line-height: 4.5rem;
+  font-size: clamp(3rem, 1vw + 1rem, 5rem);
+  border-radius: 50%;
+  color: white;
+  background-color: rgb(34, 2, 214);
+  transition: all 0.35s ease-in-out;
+  -moz-transition: all 0.35s ease-in-out;
+  -webkit-transition: all 0.35s ease-in-out;
+  -o-transition: all 0.35s ease-in-out;}
+
 
 /* - NEWSLETTER - */
 .newsletter-container {
+  margin-left: 5em;
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
-    top: -39em;
-    left: 22.7em;
-   
   }
-.newsletter {
-    padding: 0.5em;
-   width: 19em;}
-.newsletter h3 { 
+.newsletter-section {
+  
+  }
+.newsletter-header { 
     text-align: center;
     color: cyan;
     font-size: clamp(1rem, 1vw + 1rem, 1.7rem);
     background-color: black;}
 input[type="email"] {
-    padding: 1em;
+    /* padding: 1em; */
     outline: unset;}
-#email-form {
+.newsletter-form-input {
     text-align: center;
     width: 100%;
     font-family: "Rajdhani";
@@ -208,7 +261,7 @@ input[type="email"] {
     padding: 0em;
     color: black;
     outline: unset;}
-.form-button {
+.newsletter-button {
     width: 100%;
     font-size: clamp(1rem, 1vw + 1rem, 1.7rem);
     background-color: black;
@@ -222,36 +275,7 @@ input[type="email"] {
       rgba(255, 25, 224, 0.1)
     ) 1 2 10% 90%;}
 
-/* - FOOTER - */
-.footer-container {
-    width: 30%;
-    height: 4.5em;
-    position: relative;
-    left: 47.3em;
-    top:-38.5em;
-    display: flex;
-    justify-content: space-evenly;
-  }
-.social-links {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;}
-.social-links li a i {
-    text-align: center;
-    margin: 0.4em;
-    width: 70px;
-    height: 70px;
-    line-height: 4.5rem;
-    font-size: clamp(3rem, 1vw + 1rem, 5rem);
-    border-radius: 50%;
-    color: white;
-    background-color: rgb(34, 2, 214);
-    transition: all 0.35s ease-in-out;
-    -moz-transition: all 0.35s ease-in-out;
-    -webkit-transition: all 0.35s ease-in-out;
-    -o-transition: all 0.35s ease-in-out;}
-  
+
 /* - MEDIA QUERIES - */
 @media screen and (min-width: 0em) and (max-width: 119em){
 
@@ -263,10 +287,10 @@ input[type="email"] {
 .landing-text,
 .landing-image-container,
 .newsletter-container,
-.blog-post-2 img,
-.blog-post-3 img,
-.blog-post-2,
-.blog-post-3 {
+.post-2 img,
+.post-3 img,
+.post-2,
+.post-3 {
     display: none;  
 }
 
@@ -316,7 +340,7 @@ input[type="email"] {
 
 /* -------------- BLOG -------------- */
 
-.blog-container-wrapper {
+.post-section-container {
   display: flex;
   justify-content: center;
   position: relative;
@@ -329,7 +353,7 @@ input[type="email"] {
     margin-bottom: 1em;
 }
 
-.blog-container {
+.post-section {
     display: flex;
     justify-content: center;
     width: 16em;
@@ -337,7 +361,7 @@ input[type="email"] {
     gap:0;
     
   }
-.blog-post {
+.post-1 {
     border: 6px solid;
     border-image: linear-gradient(
         to bottom,
@@ -348,7 +372,7 @@ input[type="email"] {
       ) 1 2 10% 90%;
 }
 
-  .blog-post img {
+  .post-1 img {
     width: 12em;
     height: 5em;
     border: 4px solid;
@@ -361,20 +385,20 @@ input[type="email"] {
       ) 1 2 10% 90%;
   } 
   
-  .blog-post h3,
-  .blog-post-2 h3,
-  .blog-post-3 h3 {
+  .post-1 h3,
+  .post-2 h3,
+  .post-3 h3 {
     font-size: clamp(0.2rem, 1vw + 0.8rem, 2rem);
   }
   
-  .blog-post h4 {
+  .post-1 h4 {
     display: block;
     font-size: clamp(1.5rem, 1vw + 1rem, 3rem);
     padding: 0;
     margin: 0.2em 0;
   }
   
-  .blog-post p {
+  .post-1 p {
     font-family: Arial, Helvetica, sans-serif;
     font-size: clamp(0.2rem, 1vw + 0.55rem, 2rem);
     margin: 0;
@@ -382,7 +406,7 @@ input[type="email"] {
     height: 10em;
   }
   
-  .blog-post a {
+  .post-1 a {
     font-size: clamp(0.5rem, 1vw + 0.8rem, 2rem);
   }
 
@@ -415,36 +439,36 @@ input[type="email"] {
 
 @media screen and (min-width: 23em) and (max-width:119em){
   /* -------------- BLOG -------------- */
-.blog-container-wrapper {
+.post-section-container {
   margin-top:2em;
     margin-bottom:1em;
 
   }
-  .blog-container {
+  .post-section {
     width:25em;
     height:27em;
   }
-    .blog-post p {
+    .post-1 p {
       height:11em;
     font-size: clamp(0.2rem, 1vw + 0.65rem, 2rem);
   }
-  .blog-post img {
+  .post-1 img {
     width: 100%;
     height: 7em;
     
   }}
 @media screen and (min-width: 25em) and (max-width:119em){
   /* -------------- BLOG -------------- */
-.blog-container-wrapper {
+.post-section-container {
 
     margin-bottom:3em;
   
   }
-.blog-container {
+.post-section {
   height: 29em;
   }
   
-  .blog-post p {
+  .post-1 p {
     height: 12.5em;
     font-size: clamp(0.2rem, 1vw + 0.7rem, 3rem);
   }
@@ -452,21 +476,21 @@ input[type="email"] {
 /* HEIGHT !! */
 @media screen and (min-height: 50.75em) and (max-width:119em){
   /* -------------- BLOG -------------- */
-.blog-container-wrapper {
+.post-section-container {
 
     margin-bottom:3em;
   }
-.blog-container{
+.post-section{
   height: 34em;
 
   }
-  .blog-post {
+  .post-1 {
     width:20em;
   }
-  .blog-post h3 {
+  .post-1 h3 {
     font-size: clamp(0.2rem, 1vw + 1.2rem, 3rem);
   }
-  .blog-post p {
+  .post-1 p {
     height: 14em;
     font-size: clamp(0.2rem, 1vw + 0.9rem, 2rem);
   }
@@ -480,23 +504,23 @@ input[type="email"] {
     font-size: clamp(0.5rem, 1vw + 1.5rem, 3rem);
   }
   /* -------------- BLOG -------------- */
-.blog-container-wrapper {
+.post-section-container {
    /* display: none; */
    margin-top:2em;
     margin-bottom:2em;
 
   }
-  .blog-container {
+  .post-section {
     height:31.5em;
   }
-  .blog-post {
+  .post-1 {
    min-width: 30em;
   }
-  .blog-post p {
+  .post-1 p {
     height: 8.5em;
     font-size: clamp(0.2rem, 1vw + 0.9rem, 2rem);
   }
-  .blog-post img {
+  .post-1 img {
     width: 100%;
     height:10em;
     
@@ -504,17 +528,17 @@ input[type="email"] {
   }
 }
 @media screen and (min-width: 48em) and (max-width:119em){
-.blog-container-wrapper {
+.post-section-container {
   margin-top: 4.5em;
   margin-bottom:8em;
   }
-  .blog-container {
+  .post-section {
     height: 37em;
   }
-  .blog-post p {
+  .post-1 p {
     height:10.5em;
   }
-  .blog-post img {
+  .post-1 img {
     width: 100%;
     height:10em;
   }
@@ -524,30 +548,30 @@ input[type="email"] {
   }
 }
 @media screen and (min-width: 62em) and (max-width:119em) {
-  .blog-container-wrapper {
+  .post-section-container {
     margin-bottom:5.5em;
   }
-  .blog-container {
+  .post-section {
     height:50em;
   }
-  .blog-post{
+  .post-1{
     min-width: 40em;
   }
-  .blog-post p {
+  .post-1 p {
     height:11em;
     margin-bottom:1em;
     font-size: clamp(0.5rem, 1vw + 1.5rem, 3rem);
   }
-  .blog-post h3 {
+  .post-1 h3 {
     font-size: clamp(1rem, 1vw + 1.9rem, 4rem);
   }
-  .blog-post h4 {
+  .post-1 h4 {
     font-size: clamp(1rem, 1vw + 1.9rem, 4rem);
   }
-  .blog-post a {
+  .post-1 a {
     font-size: clamp(1rem, 1vw + 1.9rem, 4rem);
   }
-  .blog-post img {
+  .post-1 img {
     width: 100%;
     height:13em;
     
