--- a/assets/css/style_article.css
+++ b/assets/css/style_article.css
@@ -1,80 +1,59 @@
-/* - HIDDEN - */
-.blog-post img,
-.blog-post a,
-.newsletter-container,
-.landing-text {
-    display: none;} 
 
 
+.article-section-container {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 1.6em;
+    margin-top: 2em;
+}
 
-/* - BLOG - */
-
-.blog-container {
-    margin:0;
-    padding:0;
-    text-align: center;
-    filter: drop-shadow(0 0 8px rgba(14, 0, 214, 0.966));}
-.blog-container li {
-    margin: 1em 0;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: clamp(1rem, 0.5vw + 1rem, 1rem);
-    text-align: start;}
-.blog-post {
+.article-section {
+    display: flex;
+    flex-direction: row-reverse;
+    background-color: black;
     /* outline: auto; */
-height: auto;
-max-width: 30em;
-background-color: black;
-border-top: 4px solid;
-border-right: 4px solid;
-border-bottom: 4px solid;
-border-left: 4px solid;
-border-image:linear-gradient(
-to bottom,
-rgba(8, 85, 201, 0.5),
-rgba(8, 255, 255, 0.8),
-rgba(255, 25, 224, 0.8),
-rgba(255, 25, 224, 0.1)
-) 1 2 10% 90%; } 
-.blog-post img {
-text-align-last: center;
-width: 40%;
-height: 7em;
-border-top: 8px solid;
-border-right: 8px solid;
-border-bottom: 8px solid;
-border-left: 8px solid;
-border-image:linear-gradient(
-to bottom,
-rgba(8, 85, 201, 0.5),
-rgba(8, 255, 255, 0.8),
-rgba(255, 25, 224, 0.8),
-rgba(255, 25, 224, 0.1)
-) 1 2 10% 90%; } 
-.blog-post h2 {
-    text-align:start;
-    font-size: clamp(1rem, 0.5vw + 1rem, 2rem);}
-.blog-post h3 {
-    text-align:start;
-    font-size: clamp(1rem, 0.5vw + 1rem, 2rem);}
-.blog-post p {
-    height: auto;
-    margin:1em 0;
-    text-align:start;
+    width: 80em;
+    /* height: 20em; */
+    padding: 2em;
+    border: 4px solid;
+    border-image: linear-gradient(
+      to bottom,
+      rgba(8, 85, 201, 0.5),
+      rgba(8, 255, 255, 0.8),
+      rgba(255, 25, 224, 0.8),
+      rgba(255, 25, 224, 0.1)
+    ) 1 2 10% 90%;
+}
+
+.article {
+   
+}
+
+.article-image {
+    /* outline: auto; */
+    object-fit: cover;
+    width: 20em;
+    aspect-ratio: 1.7;
+    /* margin-bottom: 1em; */
+    
+  }
+
+.article-content {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: clamp(1rem, 0.5vw + 1rem, 1rem);
 }
-.blog-post a {
-    float: right;
-    position: relative;
-    top: 0.4em;
-    margin:0;
-    font-size: clamp(1rem, 1vw + 1rem, 1.2rem);
-    color: cyan;}
-
-.footer-container {
-    top:-32em;
+.article-header {
+    font-family: "Rajdhani";
+    font-size: clamp(0.2rem, 1vw + 1rem, 3rem);
+    margin: 0.5em 0;
+}
+.article-text {
+font-family: Arial, Helvetica, sans-serif;
 }
 
+  .article-list {
+    margin: 1em 0;
+  }
 
 /* - MEDIA QUERIES - */ 
 @media screen and (min-width: 0em) and (max-width:119em){
