--- a/assets/css/style_contact.css
+++ b/assets/css/style_contact.css
@@ -1,62 +1,73 @@
 
-/* - HIDDEN - */
-.landing-text {
-    display:none;}
+/* - FORM: CONTACT - */
 
-/* ---- ALL FORMS (IN CONTACT PAGE) ---- */
-.forms-container-wrapper {
-    display:flex;
+
+.contact-section-container {
+display: flex;
+justify-content: center;
+margin-top: 10em;
+margin-bottom: 13em;
+
+}
+.contact-section {
+    /* outline: auto; */
     flex-direction: column;
-    justify-content: center;
-    width: 20em;
-    margin:auto;
-    margin: 2em auto;
-    gap:2em;
-    margin-bottom: 4.3em;
-}
-.newsletter-container{
-    position: relative;
-    top:0;
-    left:0;
-    display: block;
+    flex-wrap: wrap;
+    width:30em;
+    padding: 1em;
 }
 
-.newsletter-container,
-.contact-form-container {
-    margin-top: 1em;
+.contact-header {
+text-align: center;
+background-color: rgb(0, 0, 0);
+font-size: clamp(0.5rem, 1vw + 0.8rem, 3rem);
 }
 
+.contact-form {
 
-.contact-form h3,
-.newsletter-form h3{
-    padding: 0.4em;
+    width: 100%;
+    font-size: clamp(0.2rem, 1vw + 0.5rem, 2rem);
     text-align: center;
-    color:white;
-    font-size: clamp(0.5rem, 1vw + 0.9rem, 2rem);
-    background-color: black;
-  
-        border:3px solid;
-        border-image: linear-gradient(
-            to right,
-            #73028a 10%,
-            rgb(2, 233, 241) 60%,
-            #73028a 70%
-            ) 1 2 10%;
-    }
-#contact-form-email,
-#email-form  {
-    font-size: clamp(1rem, 1vw + 0.5rem, 2rem);
+    outline: unset;
+    color:black;
+   
+}
+.contact-form-input,
+.contact-form-text {
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 0.5em 0;
+    text-align: center;
     width: 100%;
-    height: 2em;}
-.form-button{
-    filter: drop-shadow(0 0 8px rgba(255, 255, 255, 0.966));
-    margin-top:0.3em;
-    padding:0.1em;
+    font-size: clamp(0.2rem, 1vw + 0.5rem, 2rem);
+    color:black;
+    border:2px solid;
+            border-image: linear-gradient(
+                to right,
+                #73028a 10%,
+                rgb(2, 233, 241) 60%,
+                #73028a 70%
+                ) 1 2 10%;
+}
+.contact-form-text {
+    height:5em;
+   
+}
+
+ 
+.contact-form-text::placeholder {
+    display: none;
+    font-style: italic;
+    padding: 1em;
+   
+}
+
+.contact-button{
     width: 100%;
-    font-size: clamp(1.5rem, 1vw + 1rem, 3rem);
+    font-size: clamp(1rem, 1vw + 1rem, 1.7rem);
     background-color: black;
     color:cyan;
-    border: 4px solid;
+    filter: drop-shadow(0 0 8px rgba(255, 255, 255, 0.966));
+    border: 10px solid;
         border-image:linear-gradient(
             to bottom,
             rgba(50, 8, 201, 0.5),
@@ -64,57 +75,15 @@
             rgba(255, 25, 224, 0.8),
             rgba(255, 25, 224, 0.1)
           ) 1 2 10% 90%;}
-input[type="email"]{
-    padding:1em;
-    outline: unset;}
 
 
-
-/* - FORM: CONTACT - */
-
-#contact-form-email,
-#contact-form-text {
-    text-align: center;
-    width: 100%;
-    font-family: "Rajdhani";
-    
-    color:black;
-    outline: unset;}
-#contact-form-text {
-    font-size: clamp(0.5rem, 1vw + 0.5rem, 2rem);
-    
-    height: 3em;
-    
-}
-#contact-form-text::placeholder {
-    padding: 0.7em;}
 
 
 
 /* - MEDIA QUERIES - */
 @media screen and (min-width: 20em) and (max-width:64em) {
-.body {
-   
-    background-color: grey;
-}
+
 /* ---- FORMS ---- */
-.newsletter-container,
-.contact-form-container {
-    margin: 0.8em;
-    padding: 0.5em 1.7em;
-    
-}
-.contact-form-container {
-    margin-bottom: 3em;
-}
-
-.contact-form,
-.newsletter-form {
-    max-width: 18em;
-    position: relative;
-    top: -1em;
-}
-
 
 }
 
