--- a/assets/css/style_resources.css
+++ b/assets/css/style_resources.css
@@ -1,48 +1,31 @@
 body {
-  overflow:scroll;
-  overflow-x:hidden;
-}
-/* - VISIBLE - */
-.landing-image-container,
-.blog-post,
-.blog-post-2,
-.blog-post-3,
-.blog-post-2 img,
-.blog-post-3 img {
-  display: block;}
-
-/* - HIDDEN - */
-.newsletter-container,
-.blog-container img,
-.landing-text,
-.landing-image-container {
-  display: none;}
-
-/* - BLOG - */
-.blog-container-wrapper{
-  display: flex;
-  justify-content: center;
-  top: 0em;
-  margin-top: 3em;
-  margin-bottom: 3.5em;
-}
-.blog-container {
   
+}
+
+
+/* - RESOURCES SECTION- */
+.resource-section-container{
   display: flex;
-  flex-direction: column;
-  /* justify-content: center; */
-  gap: 1.5em;
-  width: 20em;
-  padding:0;
+  flex-wrap: wrap;
+  justify-content: center;
+margin-top: 8em;
+margin-bottom: 10.8em;
  
 }
-.blog-post,
-.blog-post-2,
-.blog-post-3 {
-  max-width: 100%;
-  height: auto;
-  margin:0;
-  padding: 0em 0em;
+.resource-section {
+  
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  gap: 5em;
+ 
+ 
+}
+.resource{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 2em;
   background-color: black;
   border: 4px solid;
   border-image: linear-gradient(
@@ -53,72 +36,48 @@ body {
     rgba(255, 25, 224, 0.1)
   ) 1 2 10% 90%;}
 
-.blog-post p, 
-.blog-post-2 p, 
-.blog-post-3 p {
-  text-align: center;
-  height: 2em;
-  padding: 0.2em 0.3em;
-  font-size: clamp(1rem, 1vw + 0.5rem, 3rem);}
-.blog-post h2,
-.blog-post-2 h2,
-.blog-post-3 h2 {
-  margin: 0em;
-  padding: 0.2em;
-  text-align: center;
-  font-size: clamp(1rem, 1vw + 2rem, 4rem);}
+.resource-image {
+  object-fit: cover;
+  width: 25em;
+  aspect-ratio: 1.7;
+  margin-bottom: 1em;
+  border: 4px solid;
+  border-image: linear-gradient(
+    to bottom,
+    rgba(8, 85, 201, 0.5),
+    rgba(8, 255, 255, 0.8),
+    rgba(255, 25, 224, 0.8),
+    rgba(255, 25, 224, 0.1)
+  ) 1 2 10% 90%;
+}
 
-  .blog-post a, 
-  .blog-post-2 a, 
-  .blog-post-3 a {
-    position: relative;
-    top:0;
-    width: auto;
-    float: none;
+
+.resource-header
+ {
+  font-size: clamp(0.2rem, 1vw + 1rem, 3rem);
+  text-align: center;
+
+ }
+ .resource-text
+ {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: clamp(0.2rem, 1vw + 0.5rem, 2rem);
+  text-align: center;
+}
+
+  .resource-link
+ {
     text-decoration: unset;
     color: white;
   }
 
-/* - FOOTER - */
-.footer-container {
-  
-  position: relative;
-  left: 0;
-  right: 0;
-  top:0em;
-  bottom: 0;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.9);
-  border-top: 2px solid;
-  border-image: linear-gradient(
-    to left,
-    #301aaf 10%,
-        rgb(0, 255, 255) 60%,
-        #301aaf 70%
-  ) 1 2 10%;}
-.social-links {
-  position: relative;
-  top: 0.3em;
-  list-style: none;}
-.social-links li a i {
-  width: 70px;
-  height: 70px;
-  line-height: 4.5rem;
-  font-size: clamp(3.2rem, 1vw + 1rem, 5rem);
-  border-radius: 50%;
-  color: white;
-  background-color: rgb(35, 0, 236);
-  transition: all 0.35s ease-in-out;
-  -moz-transition: all 0.35s ease-in-out;
-  -webkit-transition: all 0.35s ease-in-out;
-  -o-transition: all 0.35s ease-in-out;}
 
 /* - MEDIA QUERIES - */
 
 @media screen and (min-width: 0em) and (max-width:119em){
 
     /* -------------- BLOG -------------- */
-    .blog-container-wrapper{
+    .resource-section-container{
       display: flex;
       justify-content: center;
       align-items: center;
@@ -128,7 +87,7 @@ body {
       margin-bottom: 1em;
     }
 
-    .blog-container {
+    .resource-section {
       display: flex;
       justify-content: center;
       height:20em;
@@ -136,25 +95,25 @@ body {
       gap: 1em;
     }
   
-    .blog-post,
-    .blog-post-2,
-    .blog-post-3 {
+    .resource,
+    .resource,
+    .resource {
       display: block;
       margin: 0;
       padding:0em;
      
     }
   
-    .blog-post p, 
-    .blog-post-2 p, 
-    .blog-post-3 p {
+    .resource p, 
+    .resource p, 
+    .resource p {
       margin: 0.3em 0;
       /* padding: 0.7em 0.3em; */
       font-size: clamp(0.2rem, 1vw + 1rem, 1rem);
     }
-    .blog-post h2, 
-    .blog-post-2 h2, 
-    .blog-post-3 h2 {
+    .resource h2, 
+    .resource h2, 
+    .resource h2 {
       margin: 0.2em 0;
       padding: 0.2em 0;
       font-size: clamp(0.2rem, 1vw + 1.5rem, 2rem);
@@ -190,10 +149,10 @@ body {
 
 @media screen and (min-width: 23em) and (max-width:119em){
   /* -------------- BLOG -------------- */
-.blog-container-wrapper {
+.resource-section-container {
  margin: 4em 0;
 }
-  .blog-container {
+  .resource-section {
   gap: 3em;
   
   }
@@ -201,23 +160,23 @@ body {
 
 @media screen and (min-height: 50.75em) and (max-width:119em){
  
- .blog-container-wrapper{
+ .resource-section-container{
   /* margin:9em 0; */
   margin-bottom: 10em;
   margin-top:7em;
 } 
-.blog-container {
+.resource-section {
   gap: 5em;
 }
 }
 
 @media screen and (min-width: 25em)and (max-width:119em) {
   /* -------------- BLOG -------------- */
-.blog-container-wrapper {
+.resource-section-container {
 margin-top:5em;
 margin-bottom:7em;
 }
-  .blog-container {
+  .resource-section {
     width: 16em;
   }
 }
@@ -226,46 +185,46 @@ margin-bottom:7em;
 /* 600px */
 @media screen and (min-width: 37.5em) and (max-width:119em){
   
-  .blog-container-wrapper {
+  .resource-section-container {
     margin-bottom: 7em;
     margin-top:6em;
   }
-  .blog-container {
+  .resource-section {
     margin-bottom: 0em;
     gap: 4em;
   }
 
 /* RESETTER */
-.blog-post {
+.resource {
   min-width: auto;
 }
  
 }
 @media screen and (min-width: 48em) and (max-width:119em){
-.blog-container-wrapper {
+.resource-section-container {
 
 margin-top:10em;
 margin-bottom:17em;
 }
-  .blog-container {
+  .resource-section {
     
     gap: 3.5em;
 
   }
-  .blog-post,
-  .blog-post-2,
-  .blog-post-3 {
+  .resource,
+  .resource,
+  .resource {
     margin: 1em 0;
   }
 }
 /* 992px */
 @media screen and (min-width:62em) and (max-width:119em){
-  .blog-container-wrapper {
+  .resource-section-container {
 
     margin-top:15em;
     margin-bottom:23em;
     }
-      .blog-container {
+      .resource-section {
         
         gap: 7em;
     
