--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,24 +85,23 @@ body {
   /* Set the text color to transparent */
   color: transparent;
 }
-.logotype-container,
-.navbar-container{
-  /* margin:2em 0; */
-}
 
 
 /* - NAV-BAR - */
-.navbar-container {
+.navbar {
   display: flex;
   justify-content: end;
   width: 100%;
   }
-.navbar-container ul {
+.navbar-list {
   list-style: none;
   display: flex;
   gap: 3em;
 }
-.navbar-container a {
+.navbar-list-item {
+  
+}
+.navbar-link {
   color: #ffffff;
   font-size: 3rem;
   text-transform: uppercase;
@@ -144,7 +143,6 @@ color: transparent;
     justify-content: center;
     flex-direction: row;
     gap: 4em;
-
     }
 .post
 {
@@ -279,29 +277,17 @@ input[type="email"] {
 /* - MEDIA QUERIES - */
 @media screen and (min-width: 0em) and (max-width: 119em){
 
-.body {
-    overflow: scroll;
-}
-
-/* - HIDDEN - */
-.landing-text,
-.landing-image-container,
-.newsletter-container,
-.post-2 img,
-.post-3 img,
-.post-2,
-.post-3 {
-    display: none;  
-}
-
 /* ----------- HEADER ----------- */
 .header-container {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-    width: 100%;
-    height: 7em;
+  /* height: 2em; */
+  display: flex;
+  justify-content: center;
+  /* flex-wrap: wrap; */
+  flex-direction: column;
+  height: 6em;
+  padding: 1em 0;
+  gap:0;
+  width: 100%;
     background-color:rgba(7, 7, 7, 0.8);
     border-bottom: 2px solid;
     border-image: linear-gradient(
@@ -310,270 +296,274 @@ input[type="email"] {
         rgb(0, 255, 255) 60%,
         #FF00FF 70%
     ) 1 2 10%;}
-#branding {
-    margin-top: 3.5em;}
+.logotype-container{
+  margin-top: 1em;
+  margin-bottom: 0.4em;
+}
 .logotype {
-    position: relative;
-    left: 0em;
-    color:#ffffff;
-    text-decoration: unset;
-    font-size: clamp(1rem, 1vw + 2rem, 5rem);}
+    font-size: 1.7rem;
+  }
 
 /* ----------- NAV-BAR ----------- */
 .navbar {
     justify-content: center;
-    position: relative;
-    top: 0em;
-    left: 0em;
-    margin: 0em;}
-.navbar ul {
+   margin: 0.5em 0;
+  }
+.navbar-list {
     display: flex;
     justify-content: center;
-    gap: 1.5em;
+    gap:1.5em;
     list-style: none;
-    margin: 1em;
-    margin-bottom: 1em;
-    padding: 0;}
-.navbar a {
+  }
+.navbar-list-item {
+   
+  }
+.navbar-link {
     color:#ffffff;
-    font-size: clamp(0.2rem, 1vw + 1rem, 3rem);}
+    font-size: 1.2rem;}
 
-/* -------------- BLOG -------------- */
+   
+/* -------------- POSTS SECTION -------------- */
+.post-section-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: clamp(0.2em, 1vw + 0.5em, 10em);
+  margin-bottom: clamp(0.2em, 1vw + 0.5em, 10em);
+}
+.post-section{
+  /* outline: auto; */
+  margin: 0 clamp(0.2em, 1vw + 1.5em, 40em);
+display: flex;
+flex-direction: row;
+justify-content: center;
+}
 
-.post-section-container {
+.post{
+  /* outline: auto; */
+  /* padding: clamp(0.2em, 5%, 2em) clamp(1.4em, 10%, 3em); */
+  padding: 0 clamp(0.2em, 0.5vw + 1em, 10em);
+
+  height: clamp(20em, 1vw + 24em, 60em);
+  width:auto;
+  text-align: center;
+}
+
+.post-image {
+  object-fit: contain;
+  margin-top: clamp(0.7em, 1vh + 1em, 5em);
+
+  height: clamp(1em, 1vh + 5em, 10em);
+    border: 2px solid;
+    border-image:linear-gradient(
+      to bottom,
+      rgba(8, 85, 201, 0.5),
+      rgba(8, 255, 255, 0.8),
+      rgba(255, 25, 224, 0.8),
+      rgba(255, 25, 224, 0.1)
+    ) 1 2 10% 90%;} 
+
+.post-header {
+    margin: clamp(0.3em, 2.5vw, 10em) 0;
+    text-align: start;
+    font-size: clamp(0.2rem, 1vw + 0.9rem, 2rem);
+  }
+.post-text {
+  /* outline: auto; */
+    margin: clamp(0.2em, 1vw + 0.3em, 10em) 0;
+    text-align: start;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: clamp(0.2rem, 1vw + 0.7rem, 3rem);}
+.post-read-more {
+  /* outline: auto; */
+  float:right;
+    color: cyan;
+    margin: clamp(0.2em, 1vw + 0.5em, 10em) 0;
+  }
+  .post-read-more-text {
+    color:cyan;
+    font-size: clamp(0.2rem, 1vh + 0.8rem, 5rem);
+  }
+
+/* - FOOTER - */
+.post-2,
+.post-3,
+.newsletter-container,
+.landing-text{
+  display: none;
+}
+.footer-container {  
+
+  background-color: #000000;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  /* align-items: center; */
+  /* justify-content: space-evenly; */
+
+  margin:0;
+  padding:0;
+  border-top: 4px solid;
+  border-image: linear-gradient(
+    to right,
+    #73028a 10%,
+    rgb(2, 233, 241) 60%,
+    #73028a 70%
+    ) 1 2 10%;
+}
+.social-links {
   display: flex;
   justify-content: center;
-  position: relative;
-    left: 0;
-    bottom:30%; 
-    top:70%;
-    padding:0;
-    margin: 0;
-    margin-top: 1em;
-    margin-bottom: 1em;
-}
+  align-items: center;
+  list-style: none;
+margin:0;
+padding:0;}
+.social-links li a i {
+  text-align: center;
+  /* margin: 0.4em; */
+  width: 42px;
+  height: 42px;
+  line-height: 2.5rem;
+  font-size: clamp(0.2rem, 1vw + 1.5rem, 5rem);
+  border-radius: 50%;
+  color: white;
+  background-color: rgb(34, 2, 214);
+  transition: all 0.35s ease-in-out;
+  -moz-transition: all 0.35s ease-in-out;
+  -webkit-transition: all 0.35s ease-in-out;
+  -o-transition: all 0.35s ease-in-out;}
 
-.post-section {
-    display: flex;
-    justify-content: center;
-    width: 16em;
-    height: 22em;
-    gap:0;
-    
   }
-.post-1 {
-    border: 6px solid;
-    border-image: linear-gradient(
-        to bottom,
-        rgba(8, 85, 201, 0.5),
-        rgba(8, 255, 255, 0.8),
-        rgba(255, 25, 224, 0.8),
-        rgba(255, 25, 224, 0.1)
-      ) 1 2 10% 90%;
-}
-
-  .post-1 img {
-    width: 12em;
-    height: 5em;
-    border: 4px solid;
-    border-image: linear-gradient(
-        to bottom,
-        rgba(8, 85, 201, 0.5),
-        rgba(8, 255, 255, 0.8),
-        rgba(255, 25, 224, 0.8),
-        rgba(255, 25, 224, 0.1)
-      ) 1 2 10% 90%;
-  } 
-  
-  .post-1 h3,
-  .post-2 h3,
-  .post-3 h3 {
-    font-size: clamp(0.2rem, 1vw + 0.8rem, 2rem);
-  }
-  
-  .post-1 h4 {
-    display: block;
-    font-size: clamp(1.5rem, 1vw + 1rem, 3rem);
-    padding: 0;
-    margin: 0.2em 0;
-  }
-  
-  .post-1 p {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: clamp(0.2rem, 1vw + 0.55rem, 2rem);
-    margin: 0;
-    margin-bottom:1em;
-    height: 10em;
-  }
-  
-  .post-1 a {
-    font-size: clamp(0.5rem, 1vw + 0.8rem, 2rem);
-  }
-
-/* -------------- FOOTER-------------- */
-    .footer-container {
-      align-items: center;
-      left: 0;
-      right:0;
-      bottom: 0;
-      top: 0;
-      width: 100%;
-      height:4.5em;
-      background-color: rgba(0, 0, 0, 0.9);
-      border-top: 2px solid;
-      border-image: linear-gradient(
-        to left,
-        #FF00FF 10%,
-        rgb(0, 255, 255) 60%,
-        #FF00FF 70%
-      ) 1 2 10%;
-    }
-    .social-links li a i {
-      margin: 0.3em;
-      width: 42px;
-      height: 42px;
-      line-height: 2.7rem;
-      font-size: clamp(1.8rem, 1vw + 1rem, 3rem);
-    }}
 
 
 @media screen and (min-width: 23em) and (max-width:119em){
   /* -------------- BLOG -------------- */
 .post-section-container {
   margin-top:2em;
-    margin-bottom:1em;
-
-  }
-  .post-section {
-    width:25em;
-    height:27em;
-  }
-    .post-1 p {
-      height:11em;
-    font-size: clamp(0.2rem, 1vw + 0.65rem, 2rem);
-  }
-  .post-1 img {
-    width: 100%;
-    height: 7em;
+    margin-bottom:4.2em;
     
-  }}
-@media screen and (min-width: 25em) and (max-width:119em){
-  /* -------------- BLOG -------------- */
-.post-section-container {
+  }
+  .post {
+    height:auto;
+  }
 
-    margin-bottom:3em;
-  
-  }
-.post-section {
-  height: 29em;
-  }
-  
-  .post-1 p {
-    height: 12.5em;
-    font-size: clamp(0.2rem, 1vw + 0.7rem, 3rem);
-  }
 }
-/* HEIGHT !! */
+
+@media screen and (min-width: 25.875em) and (max-width:119em){
+  .post-section-container {
+    /* margin-top: 2em; */
+    margin-bottom: 8em;
+  }
+
+
+}
+
+/* iPhone X - MIN-HEIGHT  */
 @media screen and (min-height: 50.75em) and (max-width:119em){
   /* -------------- BLOG -------------- */
 .post-section-container {
 
-    margin-bottom:3em;
+    margin-top: 5em;
+    margin-bottom: 10em;
   }
-.post-section{
-  height: 34em;
+.post-header {
+  font-size: clamp(0.2rem, 1vh + 0.8rem, 5rem);
+}
 
-  }
-  .post-1 {
-    width:20em;
-  }
-  .post-1 h3 {
-    font-size: clamp(0.2rem, 1vw + 1.2rem, 3rem);
-  }
-  .post-1 p {
-    height: 14em;
-    font-size: clamp(0.2rem, 1vw + 0.9rem, 2rem);
-  }
 }
 @media screen and (min-width: 37.5em) and (max-width:119em){
   
   .header-container{
-    height:10em;
+    height: 8em;
+    padding:0;
+    
   }
-  .navbar a {
+  .logotype-container {
+    margin-top: 1em;
+    margin-bottom: 1em;
+   }
+  .logotype {
+    
+    font-size: clamp(0.5rem, 1vw + 1.5rem, 3rem);
+  }
+  .navbar {
+    margin:0;
+  }
+  .navbar-link {
     font-size: clamp(0.5rem, 1vw + 1.5rem, 3rem);
   }
   /* -------------- BLOG -------------- */
 .post-section-container {
    /* display: none; */
    margin-top:2em;
-    margin-bottom:2em;
+    margin-bottom: 2.5em;
 
   }
-  .post-section {
-    height:31.5em;
-  }
-  .post-1 {
-   min-width: 30em;
-  }
-  .post-1 p {
-    height: 8.5em;
-    font-size: clamp(0.2rem, 1vw + 0.9rem, 2rem);
-  }
-  .post-1 img {
-    width: 100%;
-    height:10em;
-    
-    
-  }
+
+
+.post-image {
+  height: 10em;
 }
+
+
+}
+
 @media screen and (min-width: 48em) and (max-width:119em){
-.post-section-container {
-  margin-top: 4.5em;
-  margin-bottom:8em;
-  }
-  .post-section {
-    height: 37em;
-  }
-  .post-1 p {
-    height:10.5em;
-  }
-  .post-1 img {
-    width: 100%;
-    height:10em;
-  }
-  .social-links li a i {
-    margin: 0.5em;
+
+.header-container{
+  height: 10em;
   
-  }
 }
+.logotype {
+  font-size: clamp(0.5rem, 1vw + 3rem, 7rem);
+}
+.navbar-list {
+  gap: 3em;
+}
+.navbar-link {
+  font-size: clamp(0.5rem, 1vw + 2rem, 5rem);
+}
+  .post-section-container {
+  margin-top: 5em;
+  margin-bottom: 4.8em;
+  }
+.post {
+  padding: 0 clamp(0.5rem, 1vw + 3rem, 10rem);;
+}
+
+  .post-header{
+    font-size: clamp(0.5rem, 1vw + 2rem, 3rem);
+  }
+.post-text {
+  line-height: 2rem;
+}
+
+.footer-container {
+  height: 7em;
+
+}
+.social-links li a i {
+  text-align: center;
+  margin: 0.4em;
+  width: 70px;
+  height: 70px;
+  line-height: 4.5rem;
+  font-size: clamp(1rem, 1vw + 2.5rem, 5rem);
+ }
+
+}
+
+
 @media screen and (min-width: 62em) and (max-width:119em) {
   .post-section-container {
-    margin-bottom:5.5em;
-  }
-  .post-section {
-    height:50em;
-  }
-  .post-1{
-    min-width: 40em;
-  }
-  .post-1 p {
-    height:11em;
-    margin-bottom:1em;
-    font-size: clamp(0.5rem, 1vw + 1.5rem, 3rem);
-  }
-  .post-1 h3 {
-    font-size: clamp(1rem, 1vw + 1.9rem, 4rem);
-  }
-  .post-1 h4 {
-    font-size: clamp(1rem, 1vw + 1.9rem, 4rem);
-  }
-  .post-1 a {
-    font-size: clamp(1rem, 1vw + 1.9rem, 4rem);
-  }
-  .post-1 img {
-    width: 100%;
-    height:13em;
-    
-  }
+    margin-top: 5em;
+    margin-bottom: 22.2em;
+    }
+
+    .post {
+      padding: 0 10em;
+    }
+
+
 }
